--- a/client/core/traits/Cargo.toml
+++ b/client/core/traits/Cargo.toml
@@ -1,49 +1,30 @@
 [package]
 name = "ac-traits"
 version = "0.1.0"
-authors = ["zqhxuyuan <zqhxuyuan@gmail.com>"]
+authors = ["Patract <https://github.com/patractlabs>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 log = "0.4.11"
 async-trait = "0.1.42"
+codec = { package = "parity-scale-codec", version = "2.0.0" }
+serde = { version = "1.0.125", features = ["derive"] }
 
-sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
+kvdb = "0.9"
+kvdb-rocksdb = "0.11"
+hash-db = "0.15"
+memory-db = "0.26"
+parking_lot = "0.11.1"
 
-#sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sp-trie = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sp-externalities = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sp-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sp-version = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sp-session = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sp-state-machine = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sp-storage = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sp-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sp-wasm-interface = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev = "22193e0" }
-#
-sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sc-client-db = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sc-network = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sc-chain-spec = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sc-block-builder = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sc-telemetry = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sc-service = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#sc-light = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#
-#prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", rev="22193e0", version = "0.9.0"}
-#tracing = "0.1.25"
-#tracing-futures = { version = "0.2.4" }
-#
-#frame-executive = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#frame-support = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#pallet-grandpa = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-#pallet-babe = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-database = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+
+sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
+sc-state-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
