--- a/client/archive/postgres/Cargo.toml
+++ b/client/archive/postgres/Cargo.toml
@@ -10,10 +10,7 @@ hex = "0.4"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-#sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json"] }
-#sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-native-tls", "json"] }
-sqlx = { version = "0.5", features = ["postgres", "runtime-async-std-native-tls", "json"] }
-async-std = { version = "1.6", features = [ "attributes" ] }
+sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json"] }
 
 [dev-dependencies]
 env_logger = "0.8"
