--- a/client/core/executor/Cargo.toml
+++ b/client/core/executor/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 name = "ac-executor"
 version = "0.1.0"
-authors = ["zqhxuyuan <zqhxuyuan@gmail.com>"]
+authors = ["Patract <https://github.com/patractlabs>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 log = "0.4.11"
@@ -17,19 +15,19 @@ futures = { version = "0.3.1", features = ["thread-pool"] }
 futures-timer = "3.0.1"
 async-trait = "0.1.42"
 
-sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-storage = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sc-service = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-version = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-wasm-interface = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev = "22193e0" }
-sp-state-machine = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
 
 ac-runtime = { path = "../runtime" }
 ac-traits = { path = "../traits" }
