--- a/client/core/notifier/Cargo.toml
+++ b/client/core/notifier/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 name = "ac-notifier"
 version = "0.1.0"
-authors = ["zqhxuyuan <zqhxuyuan@gmail.com>"]
+authors = ["Patract <https://github.com/patractlabs>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 log = "0.4.11"
@@ -13,10 +11,12 @@ futures-timer = "3.0.1"
 timer = "0.2.0"
 chrono = "0.4"
 
-sp-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
 
 ac-executor = { path = "../../core/executor" }
 ac-common = { path = "../../common" }
