--- a/client/core/runtime/Cargo.toml
+++ b/client/core/runtime/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 name = "ac-runtime"
 version = "0.1.0"
-authors = ["zqhxuyuan <zqhxuyuan@gmail.com>"]
+authors = ["Patract <https://github.com/patractlabs>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 thiserror = "1.0.21"
@@ -21,7 +19,7 @@ pin-project = "1.0.4"
 hash-db = "0.15.2"
 serde = "1.0.101"
 serde_json = "1.0.41"
-codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"]}
+codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"] }
 
 tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
 serde_bytes = "0.11"
@@ -30,39 +28,39 @@ arc-swap = "1.2.0"
 hashbrown = { version = "0.9", features = ["inline-more"] }
 async-trait = "0.1.42"
 
-sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-trie = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-externalities = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-version = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-session = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-state-machine = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-storage = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sp-wasm-interface = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev = "22193e0" }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
 
-sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sc-client-db = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sc-network = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sc-chain-spec = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sc-block-builder = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sc-telemetry = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sc-service = { version = "0.9.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-sc-light = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
+sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sc-client-db = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2",  default-features = false }
+sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+sc-light = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
 
-prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", rev="22193e0", version = "0.9.0"}
+prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
 tracing = "0.1.25"
 tracing-futures = { version = "0.2.4" }
 
-frame-executive = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-frame-support = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-pallet-grandpa = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
-pallet-babe = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev="22193e0" }
+frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
+pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
